Bug 212753. Make sure mouse capture is released when combobox popup is hidden. r+sr=bryner,a=mkaply